[package]
name = "jikan"
version = "0.1.0"
edition = "2021"

[features]
parallel = ["rayon"]

[dependencies]
thiserror = "1.0.68"
rayon = { version = "1.10.0", optional = true }
colored = "2.1.0"
serde = { version = "1.0.214", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }